# wowsp

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md  celestia-devtools.just  deny.toml  eslint.config.js  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  uno.config.ts
.cargo/: config.toml
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  site.yml
docs/: lagrange.toml
docs/ar/: README.md  SUMMARY.md
docs/ar/guides/: CONTRIBUTING.md  README-wowsp.md
docs/en/: README.md  SUMMARY.md
docs/en/designs/: README.md
docs/en/guides/: CONTRIBUTING.md  README-wowsp.md  architecture.md  fundamentals.md
docs/es/: README.md  SUMMARY.md
docs/es/guides/: CONTRIBUTING.md  README-wowsp.md  building.md
docs/fr/: README.md  SUMMARY.md
docs/fr/guides/: CONTRIBUTING.md  README-wowsp.md
docs/ja/: README.md  SUMMARY.md
docs/ja/guides/: CONTRIBUTING.md  README-wowsp.md  architecture.md
docs/ko/: README.md  SUMMARY.md
docs/ko/guides/: CONTRIBUTING.md  README-wowsp.md
docs/ru/: README.md  SUMMARY.md
docs/ru/designs/: README.md  architecture.md
docs/ru/guides/: CONTRIBUTING.md  README-wowsp.md  fundamentals.md
docs/zhs/: README.md  SUMMARY.md
docs/zhs/designs/: README.md  architecture.md
docs/zhs/guides/: CONTRIBUTING.md  README-wowsp.md  architecture.md  building.md  fundamentals.md
docs/zht/: README.md  SUMMARY.md
docs/zht/guides/: CONTRIBUTING.md  README-wowsp.md
res/i18n/locales/en/: about.json  account.json  common.json  dashboard.json  nav.json  overlay.json  replay.json  resources.json  settings.json  ships.json  stats.json  tray.json  trend.json
res/i18n/locales/zhs/: about.json  account.json  common.json  dashboard.json  nav.json  overlay.json  replay.json  resources.json  settings.json  ships.json  stats.json  tray.json  trend.json
res/shaders/holographic/: fragment.glsl  holographic.theme.toml  vertex.glsl
scripts/: check_i18n.py  check_weapons.py  dev.py  ensure_tauri_icons.py  gen_docs_languages.py  generate_icons.py  glsl_bundle.py  preflight.py  pyproject.toml  release_models.py  requirements.txt  screenshot_ships.py  sync_logo.py
scripts/deploy/: docker-compose.dev.yml
scripts/e2e/: __init__.py  conftest.py  pytest.ini  shared.py  test_ui_home.py
scripts/e2e/helpers/page_objects/: __init__.py  home.py
scripts/extract/: _common.py  build_modifier_data.py  build_rarity_map.py  build_ship_models.py  build_techtree.py  download_ship_images.py  extract_game_assets.py  inspect_gameparams.py  run.py
scripts/images/: Dockerfile
scripts/mock/: Dockerfile  requirements.txt
scripts/mock/fixtures/: .gitkeep  yamato_gameparams.json
scripts/mock/src/: main.py
scripts/model_convert/: README.md  _common.py  bake_model.py  batch_bake.py  convert_map.py  convert_map_holo.py  convert_ship.py  extract_game_assets.py  repair_glbs.py
scripts/utils/: cli_format.py  logger.py  ports.py
scripts/visual/: __init__.py  driver.py  test_smoke.py
